--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -3,9 +3,7 @@
 .shaping
     .wrapper
         h2 Erasmus Centre for
-        h2
-            |Entrepreneurship
-            span.blue Students
+        h2 Entrepreneurship <span class="blue">Students</span>
         h2 is
         h1 Shaping Ideas
 
