--- a/src/app/pages/events/sem/template.pug
+++ b/src/app/pages/events/sem/template.pug
@@ -24,26 +24,85 @@
             input#email.form-control(type='email', placeholder='name@email.com' name='email')
             button(type='submit') Submit
 
-.agenda
-    .left
-        h2 Agenda
-    .right
-        ul
-            li(*ngFor="let item of agenda")
-               span.time {{ item.time }}
-               br
-               | {{ item.event }}
+.schedule
+    h2 Agenda
+    
+    input#tab1(type="radio" name="tabs" checked)
+    label(for="tab1") Kick-off (Workshop 1)
+        
+    input#tab2(type="radio" name="tabs")
+    label(for="tab2") Workshop 2
+        
+    input#tab3(type="radio" name="tabs")
+    label(for="tab3") Workshop 3
+        
+    input#tab4(type="radio" name="tabs")
+    label(for="tab4") Final (Workshop 4)
+        
+    section#content1
+        .left
+            h3 Idea Generation
+            .date
+                | 07/02/2018
+                br
+                | 15:00-18:00
+                br
+                | Theil CT-1 (C building)
+            p Listen to inspirational talks on our SEM themes: Circular Economy & Sustainability, Sharing Economy, Social Development & Challenges. After that, a workshop on idea generation will follow where you can learn about social innovation and build your changemaking idea.
+        figure.tint
+            img(src='{{ ws1 | cd:"w_400,c_fill"}}')
+        
+    section#content2
+        .left
+            h3 Social Business Model and Marketing
+            .date
+                | 13/02/2018 
+                br
+                | 15:00-17:30
+                br
+                | Theil CT-6 (C building)
+            p Work on the most foundational tool for your enterprise: the social business model canvas. Identify your value proposition and develop a sustainable marketing strategy for your social enterprise idea. 
+        figure.tint
+            img(src='{{ ws2 | cd:"w_400,c_fill"}}')
+        
+    section#content3
+        .left
+            h3 Finance and Pitching
+            .date
+                | 20/02/2018
+                br
+                | 15:00-17:30
+                br
+                | Theil CB-4 (C building)
+            p Build the finance model of your enterprise by outlining your cost and revenue structure. Gain the tools that will help you craft that perfect pitch before the final of SEM. 
+        figure.tint
+            img(src='{{ ws3 | cd:"w_400,c_fill"}}')
+        
+    section#content4
+        .left
+            h3 The Final Pitch
+            .date
+                | 23/02/2018 
+                br
+                | 15:00-18:00
+                br
+                | ECE Campus
+            p Present your idea to a jury of experts. Compete in a final pitch battle between all teams to win the grand prize: free participation in ECE’s startup programme Get Started! Work with experienced entrepreneurs and investors there to grow your entrepreneurial skills.
+        figure.tint
+            img(src='{{ ws4 | cd:"w_400,c_fill"}}')
                
 .faq
     .left
         h2 F.A.Q.
-    .right
-        ul
-            li(*ngFor="let item of faq")
-               span.time {{ item.ask }}
-               br
-               | {{ item.answer }}
         
+        .tab(*ngFor="let item of faq; let i = index")
+            input(type="checkbox" name="tabs" id="tab-{{ i }}")
+            label(for="tab-{{ i }}") {{ item.ask }}
+            .tab-content
+                p {{ item.answer }}
+
+        
+    
 
 // .endorsements
 //     div
@@ -53,25 +112,3 @@
 //             span.heart(*appTimes="item.number")
 //             .message "{{ item.message }}"
 //             .person {{ item.person }}
-
-<ul class="tabs" data-deep-link="true" data-update-history="true" data-deep-link-smudge="true" data-deep-link-smudge="500" data-tabs id="deeplinked-tabs">
-  <li class="tabs-title is-active"><a href="#panel1d" aria-selected="true">Tab 1</a></li>
-  <li class="tabs-title"><a href="#panel2d">Tab 2</a></li>
-  <li class="tabs-title"><a href="#panel3d">Tab 3</a></li>
-  <li class="tabs-title"><a href="#panel4d">Tab 4</a></li>
-</ul>
-
-<div id="tabs" class="tabs-content" data-tabs-content="deeplinked-tabs">
-  <div class="tabs-panel is-active" id="panel1d">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-  </div>
-  <div class="tabs-panel" id="panel2d">
-    <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus.</p>
-  </div>
-  <div class="tabs-panel" id="panel3d">
-    <img class="thumbnail" src="assets/img/generic/rectangle-3.jpg">
-  </div>
-  <div class="tabs-panel" id="panel4d">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-  </div>
-</div>
