--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -1,4 +1,4 @@
-nav
+nav(*ngIf="menuvisible")
     //the mobile menu header
     .togglewrap
         //button((click)="this.toggleMenu = !this.toggleMenu", type="button")
