--- a/src/app/pages/events/sem/template.pug
+++ b/src/app/pages/events/sem/template.pug
@@ -3,11 +3,11 @@
     .wrapper
         img(src='{{ white | cd:"w_1200,c_fill"}}')
         h2 Build changemaking ideas.
-        h4 SEM 2018 Topics are Sustainability & Circular Economy, Sharing Economy, and Social Development & Challenges!
+        h4 3 workshops. 3 themes. 1 winner.
         h3 February 7, 2018
 
 .about
-    h2 Sharing Economy whenever we think is all there is around us.
+    h2 SEM 2018 Topics are Sustainability & Circular Economy, Sharing Economy, and Social Development & Challenges!
     div.left
         img(src='{{ logo | cd:"w_300,c_fill"}}')
     div.right
@@ -21,8 +21,8 @@
     div
         h2 Sign up for free here. 
         .right
-            input#email.form-control(type='email', placeholder='name@email.com' name='email')
-            button(type='submit') Submit
+            a(href="https://ecestudents2017.typeform.com/to/f8qAI4")
+                button Sign Up
 
 .schedule
     h2 Agenda
