--- a/src/app/pages/events/ubc/template.pug
+++ b/src/app/pages/events/ubc/template.pug
@@ -1,21 +1,26 @@
 //put the menu somewhere in the page
 .container
     .wrapper
-        img(src='{{ white | cd:"w_1200,c_fill"}}')
-        h2 Build your changemaking idea.
-        h4 SEM 2018 Topics are Sustainability & Circular Economy, Sharing Economy, and Social Development & Challenges!
-        h3 February 7, 2018
+        img(src='{{ white | cd:"c_crop,h_900/w_350,c_fill"}}')
+        h2 Unilever Business Challenge
+        h4 Step Up. Make an Impact.
+        h3 February 9th
 
 .about
-    h2 SEM 2018 Topics are Sustainability & Circular Economy, Sharing Economy, and Social Development & Challenges!
+    h2 Bring your creativity & intellect to the real world.
     div.left
         img(src='{{ logo | cd:"w_300,c_fill"}}')
     div.right
-        p The Social Entrepreneurship Masterclass (SEM) is an event where you experience the thrill of being an entrepreneur while solving a social or sustainable issue!
-        p With practical workshops, speakers, and consulting from experts in areas such as sustainable innovation, marketing, and business modelling, you work to develop your social business plan for the final pitch in front of a professional jury.
-        p The winning team gets the exclusive opportunity of participating for free in ECE’s 12-week startup programme Get Started, worth 300 euros per student!
-        span Kick-off: February 7
-        span Theil CT-1 (C Building), Erasmus University Campus
+        p ECE Students is here to offer you a fantastic opportunity - the chance to step up and apply your innovative skills to make an impact at Unilever, one of the world's premier global conglomerates. Work with your assigned team to formulate an ingenious solution to the presented business challenge. The winning team’s idea might be implemented by Unilever executives!
+        p The event will include:
+        ul
+            li Informative presentations by Unilever;
+            li Lunch with Unilever executives;
+            li Business case solving and pitching sessions;
+            li Networking drinks and possible job opportunities at Unilever
+        p Don’t miss this opportunity to establish yourself as a force to be reckoned with in one of the most sought after companies by employees. Good luck!
+        span Kick-off: February 9th | 09:00 - 17:00
+        span Unilever Headquarters Rotterdam, Weena 455, 3013 AL
 
 .signup
     div
