--- a/src/app/pages/events/ubc/template.pug
+++ b/src/app/pages/events/ubc/template.pug
@@ -1,7 +1,7 @@
 //put the menu somewhere in the page
 .container
     .wrapper
-        img(src='{{ white | cd:"c_crop,h_900/w_300,c_fill"}}')
+        img(src='{{ white | cd:"w_200,c_fill"}}')
         h2 UNILEVER BUSINESS CHALLENGE
         h4 Step Up. Make an Impact.
         h3 February 9th
@@ -11,7 +11,7 @@
     img.topimage(src='{{ about | cd:"w_350,c_fill"}}')
     h2 Bring your creativity & intellect to the real world.
     div.left
-        img(src='{{ logo | cd:"w_350,c_fill"}}')
+        img(src='{{ logo | cd:"w_200,c_fill"}}')
     div.right
         p ECE Students is here to offer you a fantastic opportunity - the chance to step up and apply your innovative skills to make an impact at Unilever, one of the world's premier global conglomerates. Work with your assigned team to formulate an ingenious solution to the presented business challenge. The winning team’s idea might be implemented by Unilever executives!
         p The event will include:
