--- a/src/style_imports/_events.scss
+++ b/src/style_imports/_events.scss
@@ -203,7 +203,9 @@
     grid-template-columns: 100px auto;
     .left {
         grid-area: left;
-        align-self: center;
+        align-self: start;
+        direction: rtl;
+        padding-top: ms(0);
     }
     h2 {
         transform: rotate(-90deg);
@@ -220,6 +222,7 @@
         grid-template-columns: 1fr 3fr;
         .left {
             align-self: start;
+            direction: ltr;
         }
         h2 {
             transform: rotate(0deg);
