higher res x image

--- a/src/app/pages/events/ubc/template.pug
+++ b/src/app/pages/events/ubc/template.pug
@@ -8,7 +8,7 @@
         h4 Limited spots available.
 
 .about
-    img.topimage(src='{{ about | cd:"w_350,c_fill"}}')
+    img.topimage(src='{{ about | cd:"c_fill"}}')
     h2 Bring your creativity & intellect to the real world.
     div.left
         img(src='{{ logo | cd:"w_600,c_fill"}}')
