--- a/src/style_imports/_events.scss
+++ b/src/style_imports/_events.scss
@@ -85,6 +85,7 @@
         .topimage {
             grid-area: topimage;
             margin: 0 auto;
+            max-width: 50%;
         }
 
         .left img {
