--- a/src/app/pages/events/ubc/template.pug
+++ b/src/app/pages/events/ubc/template.pug
@@ -4,6 +4,7 @@
         img(src='{{ white | cd:"w_200,c_fill"}}')
         h2 UNILEVER BUSINESS CHALLENGE
         h4 Step Up. Make an Impact.
+        h4 Powered by D3
         h3 February 9th
         h4 Limited spots available.
 
