--- a/src/app/pages/events-overview/template.pug
+++ b/src/app/pages/events-overview/template.pug
@@ -3,11 +3,11 @@ main
     h2 Events Calendar
     .overview
         .event
-            img.top(src='{{"pages/idealab/header" | cd:"w_200,c_fill"}}')
+            img.top(src='{{"pages/idealab/header" | cd:"w_200,h_175,c_fill"}}')
             h3 Innovation challenge 2018
-            .text
+            .text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum ornare eros, tempus pulvinar magna vulputate id.Praesent eget nunc quis est pulvinar feugiat.    
             .bottom
-                a(href="") Learn more >
-                img.icon(src='{{"pages/idealab/logo" | cd:"w_20,c_fill"}}')
+                a(href="") Learn more
+                img(src='{{"pages/idealab/logo" | cd:"h_50,c_fill"}}')
             
             
